<resources>
    <string name="app_name">My Meal</string>
    <string name="main_meal">Main Meal : %1$s</string>
    <string name="salad">Salad : %1$s</string>
    <string name="drink">Drink : %1$s</string>
    <string name="dessert">Dessert : %1$s</string>
    <string name="booking_data">Booking Date : %1$s</string>
    <string name="total_string">Total : %1$s</string>
    <string name="choose_meal">Select Meal</string>
    <string name="choose_salad">Select Salad</string>
    <string name="choose_drink">Select Drink</string>
    <string name="choose_dessert">Select Dessert</string>
    <string name="choose_date">Select Booking date</string>
    <string name="same_day_booking">Same day booking charge</string>
    <string name="new_order">New Order</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Hello , this is my order :\n\nMain Meal : %1$s \nSalad : %2$s \nDrink : %3$s \nDessert : %4$s \nBooking date : %5$s\n\nTotal : %6$s \nThank you.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="start_new_order">Start New Order</string>
    <string name="start_order">Start Order</string>
    <string name="subtotal">Subtotal : %s</string>
    <string name="tax">Tax Rate : 0.06 = %s</string>
    <string name="total">Total : %s</string>
    <string name="cancel_order">Cancel Order ?</string>
    <string name="delete_order">Delete This Order ?</string>
    <string name="can_not_undo">WARNING ! \nThis action can not be undo</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit Order</string>
    <string name="select_meal">Select your meal</string>
    <string name="select_salad">Select your salad</string>
    <string name="select_drink">Select your drink</string>
    <string name="select_dessert">Select your dessert</string>
    <string name="order_summary">Order Summary</string>
    <string name="no">No</string>
    <string name="extra_charge">Extra charge for same day booking.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_order_yet">You do not have any order yet</string>
</resources>